parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    WHITESPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statements -> <empty>
Rule 5     statement -> ID EQUALS expression
Rule 6     expression -> expression A term
Rule 7     expression -> expression S term
Rule 8     expression -> term
Rule 9     term -> term M factor
Rule 10    term -> term D factor
Rule 11    term -> factor
Rule 12    factor -> LPAREN expression RPAREN
Rule 13    factor -> BINARY_LITERAL
Rule 14    factor -> ID

Terminals, with rules where they appear

A                    : 6
BINARY_LITERAL       : 13
COMMENT              : 
D                    : 10
EQUALS               : 5
ID                   : 5 14
LPAREN               : 12
M                    : 9
RPAREN               : 12
S                    : 7
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

expression           : 5 6 7 12
factor               : 9 10 11
program              : 0
statement            : 2 3
statements           : 1 2
term                 : 6 7 8 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statements -> .
    (5) statement -> . ID EQUALS expression

  ! shift/reduce conflict for ID resolved as shift
    $end            reduce using rule 4 (statements -> .)
    ID              shift and go to state 4

  ! ID              [ reduce using rule 4 (statements -> .) ]

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (5) statement -> . ID EQUALS expression

    $end            reduce using rule 1 (program -> statements .)
    ID              shift and go to state 4

    statement                      shift and go to state 5

state 3

    (3) statements -> statement .

    ID              reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 4

    (5) statement -> ID . EQUALS expression

    EQUALS          shift and go to state 6


state 5

    (2) statements -> statements statement .

    ID              reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 6

    (5) statement -> ID EQUALS . expression
    (6) expression -> . expression A term
    (7) expression -> . expression S term
    (8) expression -> . term
    (9) term -> . term M factor
    (10) term -> . term D factor
    (11) term -> . factor
    (12) factor -> . LPAREN expression RPAREN
    (13) factor -> . BINARY_LITERAL
    (14) factor -> . ID

    LPAREN          shift and go to state 11
    BINARY_LITERAL  shift and go to state 12
    ID              shift and go to state 7

    expression                     shift and go to state 8
    term                           shift and go to state 9
    factor                         shift and go to state 10

state 7

    (14) factor -> ID .

    M               reduce using rule 14 (factor -> ID .)
    D               reduce using rule 14 (factor -> ID .)
    A               reduce using rule 14 (factor -> ID .)
    S               reduce using rule 14 (factor -> ID .)
    ID              reduce using rule 14 (factor -> ID .)
    $end            reduce using rule 14 (factor -> ID .)
    RPAREN          reduce using rule 14 (factor -> ID .)


state 8

    (5) statement -> ID EQUALS expression .
    (6) expression -> expression . A term
    (7) expression -> expression . S term

    ID              reduce using rule 5 (statement -> ID EQUALS expression .)
    $end            reduce using rule 5 (statement -> ID EQUALS expression .)
    A               shift and go to state 13
    S               shift and go to state 14


state 9

    (8) expression -> term .
    (9) term -> term . M factor
    (10) term -> term . D factor

    A               reduce using rule 8 (expression -> term .)
    S               reduce using rule 8 (expression -> term .)
    ID              reduce using rule 8 (expression -> term .)
    $end            reduce using rule 8 (expression -> term .)
    RPAREN          reduce using rule 8 (expression -> term .)
    M               shift and go to state 15
    D               shift and go to state 16


state 10

    (11) term -> factor .

    M               reduce using rule 11 (term -> factor .)
    D               reduce using rule 11 (term -> factor .)
    A               reduce using rule 11 (term -> factor .)
    S               reduce using rule 11 (term -> factor .)
    ID              reduce using rule 11 (term -> factor .)
    $end            reduce using rule 11 (term -> factor .)
    RPAREN          reduce using rule 11 (term -> factor .)


state 11

    (12) factor -> LPAREN . expression RPAREN
    (6) expression -> . expression A term
    (7) expression -> . expression S term
    (8) expression -> . term
    (9) term -> . term M factor
    (10) term -> . term D factor
    (11) term -> . factor
    (12) factor -> . LPAREN expression RPAREN
    (13) factor -> . BINARY_LITERAL
    (14) factor -> . ID

    LPAREN          shift and go to state 11
    BINARY_LITERAL  shift and go to state 12
    ID              shift and go to state 7

    expression                     shift and go to state 17
    term                           shift and go to state 9
    factor                         shift and go to state 10

state 12

    (13) factor -> BINARY_LITERAL .

    M               reduce using rule 13 (factor -> BINARY_LITERAL .)
    D               reduce using rule 13 (factor -> BINARY_LITERAL .)
    A               reduce using rule 13 (factor -> BINARY_LITERAL .)
    S               reduce using rule 13 (factor -> BINARY_LITERAL .)
    ID              reduce using rule 13 (factor -> BINARY_LITERAL .)
    $end            reduce using rule 13 (factor -> BINARY_LITERAL .)
    RPAREN          reduce using rule 13 (factor -> BINARY_LITERAL .)


state 13

    (6) expression -> expression A . term
    (9) term -> . term M factor
    (10) term -> . term D factor
    (11) term -> . factor
    (12) factor -> . LPAREN expression RPAREN
    (13) factor -> . BINARY_LITERAL
    (14) factor -> . ID

    LPAREN          shift and go to state 11
    BINARY_LITERAL  shift and go to state 12
    ID              shift and go to state 7

    term                           shift and go to state 18
    factor                         shift and go to state 10

state 14

    (7) expression -> expression S . term
    (9) term -> . term M factor
    (10) term -> . term D factor
    (11) term -> . factor
    (12) factor -> . LPAREN expression RPAREN
    (13) factor -> . BINARY_LITERAL
    (14) factor -> . ID

    LPAREN          shift and go to state 11
    BINARY_LITERAL  shift and go to state 12
    ID              shift and go to state 7

    term                           shift and go to state 19
    factor                         shift and go to state 10

state 15

    (9) term -> term M . factor
    (12) factor -> . LPAREN expression RPAREN
    (13) factor -> . BINARY_LITERAL
    (14) factor -> . ID

    LPAREN          shift and go to state 11
    BINARY_LITERAL  shift and go to state 12
    ID              shift and go to state 7

    factor                         shift and go to state 20

state 16

    (10) term -> term D . factor
    (12) factor -> . LPAREN expression RPAREN
    (13) factor -> . BINARY_LITERAL
    (14) factor -> . ID

    LPAREN          shift and go to state 11
    BINARY_LITERAL  shift and go to state 12
    ID              shift and go to state 7

    factor                         shift and go to state 21

state 17

    (12) factor -> LPAREN expression . RPAREN
    (6) expression -> expression . A term
    (7) expression -> expression . S term

    RPAREN          shift and go to state 22
    A               shift and go to state 13
    S               shift and go to state 14


state 18

    (6) expression -> expression A term .
    (9) term -> term . M factor
    (10) term -> term . D factor

    A               reduce using rule 6 (expression -> expression A term .)
    S               reduce using rule 6 (expression -> expression A term .)
    ID              reduce using rule 6 (expression -> expression A term .)
    $end            reduce using rule 6 (expression -> expression A term .)
    RPAREN          reduce using rule 6 (expression -> expression A term .)
    M               shift and go to state 15
    D               shift and go to state 16


state 19

    (7) expression -> expression S term .
    (9) term -> term . M factor
    (10) term -> term . D factor

    A               reduce using rule 7 (expression -> expression S term .)
    S               reduce using rule 7 (expression -> expression S term .)
    ID              reduce using rule 7 (expression -> expression S term .)
    $end            reduce using rule 7 (expression -> expression S term .)
    RPAREN          reduce using rule 7 (expression -> expression S term .)
    M               shift and go to state 15
    D               shift and go to state 16


state 20

    (9) term -> term M factor .

    M               reduce using rule 9 (term -> term M factor .)
    D               reduce using rule 9 (term -> term M factor .)
    A               reduce using rule 9 (term -> term M factor .)
    S               reduce using rule 9 (term -> term M factor .)
    ID              reduce using rule 9 (term -> term M factor .)
    $end            reduce using rule 9 (term -> term M factor .)
    RPAREN          reduce using rule 9 (term -> term M factor .)


state 21

    (10) term -> term D factor .

    M               reduce using rule 10 (term -> term D factor .)
    D               reduce using rule 10 (term -> term D factor .)
    A               reduce using rule 10 (term -> term D factor .)
    S               reduce using rule 10 (term -> term D factor .)
    ID              reduce using rule 10 (term -> term D factor .)
    $end            reduce using rule 10 (term -> term D factor .)
    RPAREN          reduce using rule 10 (term -> term D factor .)


state 22

    (12) factor -> LPAREN expression RPAREN .

    M               reduce using rule 12 (factor -> LPAREN expression RPAREN .)
    D               reduce using rule 12 (factor -> LPAREN expression RPAREN .)
    A               reduce using rule 12 (factor -> LPAREN expression RPAREN .)
    S               reduce using rule 12 (factor -> LPAREN expression RPAREN .)
    ID              reduce using rule 12 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 12 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 12 (factor -> LPAREN expression RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for ID in state 0 resolved as shift
